// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<div
  className="eco-search-facet"
>
  <div
    className="eco-search-facet-label"
  >
    A Facet
  </div>
  <div
    className="eco-search-facet-options"
  >
    <label
      className="eco-search-facet-option"
      htmlFor="example_facet_A FacetfieldValue1"
      key="fieldValue1"
    >
      <input
        checked={false}
        className="eco-search-facet-option__input"
        id="example_facet_A FacetfieldValue1"
        onChange={[Function]}
        type="checkbox"
      />
      <span
        className="eco-search-facet-option__label"
      >
        fieldValue1
      </span>
      <span
        className="eco-search-facet-option__count"
      >
        10
      </span>
    </label>
    <label
      className="eco-search-facet-option"
      htmlFor="example_facet_A FacetfieldValue2"
      key="fieldValue2"
    >
      <input
        checked={true}
        className="eco-search-facet-option__input"
        id="example_facet_A FacetfieldValue2"
        onChange={[Function]}
        type="checkbox"
      />
      <span
        className="eco-search-facet-option__label"
      >
        fieldValue2
      </span>
      <span
        className="eco-search-facet-option__count"
      >
        5
      </span>
    </label>
  </div>
  <div
    className="eco-search-facet__view-more"
    onClick={[MockFunction]}
  >
    + More
  </div>
</div>
`;

exports[`won't render more if more param is false 1`] = `
<div
  className="eco-search-facet"
>
  <div
    className="eco-search-facet-label"
  >
    A Facet
  </div>
  <div
    className="eco-search-facet-options"
  >
    <label
      className="eco-search-facet-option"
      htmlFor="example_facet_A FacetfieldValue1"
      key="fieldValue1"
    >
      <input
        checked={false}
        className="eco-search-facet-option__input"
        id="example_facet_A FacetfieldValue1"
        onChange={[Function]}
        type="checkbox"
      />
      <span
        className="eco-search-facet-option__label"
      >
        fieldValue1
      </span>
      <span
        className="eco-search-facet-option__count"
      >
        10
      </span>
    </label>
    <label
      className="eco-search-facet-option"
      htmlFor="example_facet_A FacetfieldValue2"
      key="fieldValue2"
    >
      <input
        checked={true}
        className="eco-search-facet-option__input"
        id="example_facet_A FacetfieldValue2"
        onChange={[Function]}
        type="checkbox"
      />
      <span
        className="eco-search-facet-option__label"
      >
        fieldValue2
      </span>
      <span
        className="eco-search-facet-option__count"
      >
        5
      </span>
    </label>
  </div>
</div>
`;
